fixed remaining issues 4, 8, 12; fixed redundant whitespace in 'about this model'

--- a/src/index.css
+++ b/src/index.css
@@ -206,7 +206,6 @@ body {
 }
 
 .overview-intro {
-  max-width: 860px;
   margin-bottom: 24px;
 }
 
